--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- The content below is only a placeholder and can be replaced. -->
 <div style="text-align:center">
-    <h1>Welcome to Cars App!</h1>
+    <h1>Welcome to My App!</h1>
 </div>
 
 <div class="main-container">
