--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,3 +1,13 @@
-<div>
+<div *ngIf="!authenticated">
     <a routerLink="/users/register">Register</a>
+    <a routerLink="/users/login">Login</a>
+</div>
+<div *ngIf="authenticated">
+    Hi, {{username}}
+    <a
+        href="javascript:void(0)"
+        (click)="logout()"
+    >
+        Logout
+    </a>
 </div>
