--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -3,6 +3,7 @@
     <a routerLink="/users/login">Login</a>
 </div>
 <div *ngIf="authenticated">
+    <a routerLink="/cars/add">Add Car</a>
     Hi, {{username}}
     <a
         href="javascript:void(0)"
