Add a form to create cars in the system. Each car has ‘make’ as string, ‘model’ as string, ‘year’ as number, ‘engine’ as string, ‘price’ as number, ‘image’ as string URL and optional ‘mileage’ as number. Make sure you validate everything on the client application. The data must be sent as POST request to the server on ‘/cars/create/’. This route is only for authenticated users so you need to send a header with `Authorization` name and value `bearer {token}` in order to pass the authentication checks.

--- a/src/app/cars/add-car/add-car.component.html
+++ b/src/app/cars/add-car/add-car.component.html
@@ -1,1 +1,143 @@
-<h1>Add Car</h1>
+<form
+    (ngSubmit)="addCar()"
+    class="example-form"
+    #carForm="ngForm"
+>
+
+    <input
+        placeholder="Make"
+        name="make"
+        [(ngModel)]="car.make"
+        required
+    >
+
+    <input
+        placeholder="Model"
+        name="model"
+        [(ngModel)]="car.model"
+        required
+    >
+    <br>
+
+    <input
+        placeholder="Year"
+        name="year"
+        [(ngModel)]="car.year"
+        required
+    >
+    <br>
+
+    <input
+        placeholder="Image"
+        name="image"
+        [(ngModel)]="car.image"
+        required
+    >
+    <br>
+
+    <input
+        placeholder="Price"
+        name="price"
+        [(ngModel)]="car.price"
+        required
+    >
+    <br>
+
+    <input
+        placeholder="Engine"
+        name="engine"
+        [(ngModel)]="car.engine"
+        required
+    >
+    <br>
+
+    <!-- <md-form-field class="example-full-width">
+        <input
+            mdInput
+            placeholder="Model"
+            name="model"
+            [(ngModel)]="car.model"
+            value
+            required
+        >
+    </md-form-field>
+    <br>
+    <md-form-field class="example-full-width">
+        <input
+            mdInput
+            placeholder="Year"
+            name="year"
+            [(ngModel)]="car.year"
+            value
+            required
+        >
+    </md-form-field>
+    <br>
+    <md-form-field class="example-full-width">
+        <input
+            mdInput
+            placeholder="Image"
+            name="image"
+            [(ngModel)]="car.image"
+            value
+            required
+        >
+    </md-form-field>
+    <br>
+    <md-form-field class="example-full-width">
+        <input
+            mdInput
+            placeholder="Price"
+            name="price"
+            [(ngModel)]="car.price"
+            value
+            required
+        >
+    </md-form-field>
+    <br>
+    <md-select
+        placeholder="Engine"
+        name="engine"
+        [(ngModel)]="car.engine"
+        required
+    >
+        <md-option
+            *ngFor="let engine of engines"
+            [value]="engine"
+        >
+            {{ engine }}
+        </md-option>
+    </md-select>
+    <br> -->
+
+    <a
+        md-raised-button
+        color="warn"
+        (click)="resetCar()"
+    >
+        CANCEL
+    </a>
+
+    <button
+        md-raised-button
+        color="primary"
+        type="submit"
+        [disabled]="!carForm.form.valid"
+    >
+        ADD
+    </button>
+
+</form>
+<!-- <div class="preview">
+    <div class="label">MAKE</div>
+    <div>{{car.make}}</div>
+    <div class="label">IMAGE</div>
+    <img
+        [src]="car.image"
+        alt
+    >
+    <div class="label">PRICE</div>
+    <div>{{car.price}}</div>
+    <div class="label">ENGINE</div>
+    <div>{{car.engine}}</div>
+</div> -->
