Add a page where all cars are listed. Since the data from the server comes in pages of 10 cars, your page must have buttons to navigate between the pages. Try to validate the buttons when the page is no longer valid. You need to make a GET request to ‘/cars/all’ to receive an array of cars data. Optionally, you can pass a query string parameter ‘page’ to request more data, for example ‘/cars/all?page=2’. Link each cars to its details page. Don’t show every piece of information about the car on this page. Leave something for the details page. You may add this functionality on the home page.

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -5,6 +5,7 @@
 <div *ngIf="authenticated">
     <a routerLink="/stats">Statistics</a>
     <a routerLink="/cars/add">Add Car</a>
+    <a routerLink="/cars">Cars</a>
     Hi, {{username}}
     <a
         href="javascript:void(0)"
