--- a/src/app/cars/list-cars/list-cars.component.html
+++ b/src/app/cars/list-cars/list-cars.component.html
@@ -1,6 +1,13 @@
 <div *ngIf="cars">
+    <div>
+        <input
+            type="text"
+            [(ngModel)]="searchText"
+            name="searchText"
+        >
+        <button (click)="search()">Search</button>
+    </div>
     <div *ngIf="cars.length === 0">No more cars available</div>
-
     <ul>
         <li *ngFor="let car of cars">
             <a routerLink="/cars/details/{{car.id}}">
