Add a page where all car details are shown. You need to make a GET request to ‘/cars/details/{id}’ to retrieve information about the car with the provided id. This route is only for authenticated users so you need to send a header with `Authorization` name and value `bearer {token}` in order to pass the authentication checks. Make sure

--- a/src/app/cars/list-cars/list-cars.component.html
+++ b/src/app/cars/list-cars/list-cars.component.html
@@ -21,16 +21,19 @@
             </a>
         </li>
     </ul>
-    <button
-        [disabled]="page === 1"
-        (click)="prevPage()"
-    >
-        PREV
-    </button>
-    <button
-        [disabled]="cars.length === 0 || cars.length < 10"
-        (click)="nextPage()"
-    >
-        NEXT
-    </button>
+    <br>
+    <div>
+        <button
+            [disabled]="page === 1"
+            (click)="prevPage()"
+        >
+            PREV
+        </button>
+        <button
+            [disabled]="cars.length === 0 || cars.length < 10"
+            (click)="nextPage()"
+        >
+            NEXT
+        </button>
+    </div>
 </div>
