On the car details page add an option for the user to put a rating from 1 to 5 and optionally a comment for the current car. Each review has ‘rating’ as number between 1 and 5 and ‘comment’ as string data (sent as JSON). You need to make a POST request to ‘/cars/details/{id}/reviews/create’ in order to create a review. The id is the car id the user is reviewing. Additionally, add a like button, which makes a POST request to ‘/cars/details/{id}/like’. You don’t need to send any data, just update the total likes for the current car. The same user cannot like the same car twice. Make sure you validate everything on the client application. Both routes are only for authenticated users so you need to send a header with `Authorization` name and value `bearer {token}` in order to pass the authentication checks.

--- a/src/app/cars/car-details/car-details.component.html
+++ b/src/app/cars/car-details/car-details.component.html
@@ -3,12 +3,22 @@
 <div>
     <div>ID: {{car.id}}</div>
     <div>MAKE: {{car.make}}</div>
-    <img
-        *ngIf="car.image"
-        [src]="car.image"
-    >
+    <img *ngIf="car.image" [src]="car.image">
+    <button (click)="like()">Like</button>
     <div>MODEL: {{car.model}}</div>
     <div>YEAR: {{car.year}}</div>
     <div>ENGINE: {{car.engine}}</div>
     <div>PRICE: {{car.price}}</div>
+    <div>LIKES: {{car.likes}}</div>
 </div>
+
+<form (ngSubmit)="sendReview()" class="example-form" #reviewForm="ngForm">
+    <select placeholder="Rating" name="rating"  [(ngModel)]="review.rating">
+        <option *ngFor="let number of [1,2,3,4,5]" [value]="number" >{{number}}</option>
+    </select><br/>
+    <textarea placeholder="Comment" name="comment" cols="30" rows="10" [(ngModel)]="review.comment"></textarea><br/>
+    <button md-raised-button color="primary" type="submit" [disabled]="!reviewForm.form.valid">
+        SEND
+    </button>
+
+</form>
