On the car details page, you need to list all reviews for the current car. You need to make a GET request to ‘/cars/details/{id}/reviews’ to receive an array of review data. This route is only for authenticated users so you need to send a header with `Authorization` name and value `bearer {token}` in order to pass the authentication checks.

--- a/src/app/cars/car-details/car-details.component.html
+++ b/src/app/cars/car-details/car-details.component.html
@@ -12,6 +12,23 @@
     <div>LIKES: {{car.likes}}</div>
 </div>
 
+<h3>Reviews</h3>
+<div>
+    <div *ngFor="let review of reviews">
+        <div>
+            Rating - {{review.rating}}
+        </div> 
+        <div *ngIf="review.comment">
+                Comment - {{review.comment}} 
+        </div>
+       <div> 
+           User - {{review.user}} 
+        </div>
+        <hr>
+        <hr>
+    </div>
+</div>
+<h3>Add Review</h3>
 <form (ngSubmit)="sendReview()" class="example-form" #reviewForm="ngForm">
     <select placeholder="Rating" name="rating"  [(ngModel)]="review.rating">
         <option *ngFor="let number of [1,2,3,4,5]" [value]="number" >{{number}}</option>
