Add a profile page where all cars created by the current user are shown. You need to make a GET request to ‘/cars/mine/’ to receive an array of cars. This request does not have paging so you do not have to implement it. The route is only for authenticated users so you need to send a header with `Authorization` name and value `bearer {token}` in order to pass the authentication checks. =================================================================================================== On the profile page, for each car add a delete button to allow the user to remove a previously added car from the system. To delete a car, you need to make a POST request to ‘/cars/delete/{id}’. This route is only for authenticated users so you need to send a header with `Authorization` name and value `bearer {token}` in order to pass the authentication checks.

--- a/src/app/users/profile/profile.component.html
+++ b/src/app/users/profile/profile.component.html
@@ -1,3 +1,12 @@
-<p>
-  profile works!
-</p>
+<h3>User Profile</h3>
+<div>
+    <div *ngFor="let car of cars">
+        <div>
+            MAKE - {{car.make}}
+        </div> 
+       
+      <button (click)="deleteCar(car.id)">DELETE</button>
+        <hr>
+        <hr>
+    </div>
+</div>
