--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -6,6 +6,7 @@
     <a routerLink="/stats">Statistics</a>
     <a routerLink="/cars/add">Add Car</a>
     <a routerLink="/cars">Cars</a>
+    <a routerLink="/users/profile">Profile</a>
     Hi, {{username}}
     <a
         href="javascript:void(0)"
